<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rmf_demo_fleets</name>
  <version>0.0.0</version>
  <description>A package containing launches and implementations for demo or simulated fleets interacting with rmf_core libraries</description>
  <maintainer email="aaron@openrobotics.org">Aaron Chong</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>rmf_traffic_ros2</exec_depend>
  <exec_depend>rmf_fleet_adapter</exec_depend>
  <exec_depend>building_map_tools</exec_depend>
  <exec_depend>rmf_demo_maps</exec_depend>
  
  <exec_depend>rmf_schedule_visualizer</exec_depend>
  <exec_depend>fleet_state_visualizer</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
