<package format="3">
  <name>rmf_gazebo_plugins</name>
  <version>1.1.0</version>
  <description>
    ROS 2 slotcar plugin and payload handlers for Gazebo simulated robots
  </description>
  <author>Morgan Quigley</author>
  <author>Michael Grey</author>
  <author>Roselle Carmen</author>
  <author>Aaron Chong</author>
  <author>Brandon Ong</author>
  <maintainer email="morgan@openrobotics.org">Morgan Quigley</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>gazebo_ros_pkgs</depend>

  <depend>std_msgs</depend>
  
  <depend>rmf_fleet_msgs</depend>
  <depend>rmf_dispenser_msgs</depend>
  <depend>rmf_ingestor_msgs</depend>
  <depend>building_map_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
