<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rmf_rviz_plugin</name>
  <version>1.2.0</version>
  <description>Rviz2 panel for controlling rmf_demos</description>
  <maintainer email="yadunund@openrobotics.org">yadu</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>

  <depend>rviz_common</depend>
  <depend>rviz_default_plugins</depend>
  <depend>rviz_rendering</depend>
  <depend>pluginlib</depend>
  <depend>resource_retriever</depend>

  <build_depend>qtbase5-dev</build_depend>
  <exec_depend>libqt5-core</exec_depend>
  <exec_depend>libqt5-gui</exec_depend>
  <exec_depend>libqt5-widgets</exec_depend>

  <depend>rmf_task_msgs</depend>
  <depend>rmf_traffic</depend>
  <depend>rmf_fleet_msgs</depend>
  <depend>rmf_door_msgs</depend>
  <depend>rmf_lift_msgs</depend>
  <depend>rmf_dispenser_msgs</depend>
  <depend>std_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
